--- a/hello.html
+++ b/hello.html
@@ -17,5 +17,9 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<div>
+			<p>Une petite description de moi-même</p>
+		</div>
 	
-</body></html>
+	</body>
+</html>
