Ajout de mon gist

--- a/hello.html
+++ b/hello.html
@@ -28,6 +28,13 @@
 			<h1>Mes récompenses</h1>
 			<p>En construction</p>
 		</div>
+		
+		<!-- Mon gist -->
+		<div>
+			<h1>Mon gist</h1>
+			<p><script src="https://gist.github.com/DavyMetangmo/ee095ec9ca3fd978bf700e2ce0650baa.js"></script></p>
+		</div>
+	
 	
 	</body>
 </html>
